methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:48: error: Boolean(true) does not take parameters
    if (estSurBiscuit()){estFini=true();}
                                     ^